# error_project

./: .env  .gitmessage.txt  Dockerfile  README.md  alembic.ini  docker-compose.yml  dump.rdb  main.py  pyproject.toml  redis_set.py  requirements.txt  test.py
app/database/: db.py
app/migrations/: env.py
app/models/: models.py
app/routers/: auth.py  search_bar.py  word_search.py
app/services/: kakao_oauth.py  user_service.py
app/tests/: test_auth.py  test_search_bar.py  test_word_search.py  tests_auth.py
app/utils/: utils.py
config/: settings.py
database/: db.py
migrations/: env.py
migrations/versions/: 67ad0acb322d_make_password_nullable.py
