[tool.poetry]
name = "voca-project-be"
version = "0.1.0"
description = ""
authors = ["Rosaly-J <seohwi327@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "0.88.0"
pytest = "^8.3.3"
httpx = "^0.27.2"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
redis = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
